--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,4 +26,9 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+
+    implementation "com.github.AtomicRobotics3805:CFLib:2.0.0"
+    implementation "org.apache.commons:commons-math3:3.6.1"
+    implementation "com.acmerobotics.roadrunner:core:0.5.6"
+    implementation 'com.github.NoahBres:MeepMeep:a1ab7c3d67'
 }
