--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,6 +14,7 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+apply plugin: 'kotlin-android'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -27,8 +28,10 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation "com.github.AtomicRobotics3805:CFLib:2.0.0"
     implementation "org.apache.commons:commons-math3:3.6.1"
     implementation "com.acmerobotics.roadrunner:core:0.5.6"
-    implementation 'com.github.NoahBres:MeepMeep:a1ab7c3d67'
+    implementation "com.github.NoahBres:MeepMeep:a1ab7c3d67"
 }
