--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,7 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url = 'https://maven.brott.dev/'}
 }
 
 dependencies {
@@ -18,8 +19,9 @@ dependencies {
     runtimeOnly 'org.tensorflow:tensorflow-lite:2.12.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    implementation('com.acmerobotics.dashboard:dashboard:0.4.6'){
-        exclude group: 'org.firstinspires.ftc'
-    }
+    implementation('com.acmerobotics.dashboard:dashboard:0.4.6')
+//            {
+//        exclude group: 'org.firstinspires.ftc'
+//    }
 }
 
