--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -17,8 +17,9 @@ dependencies {
     implementation 'org.firstinspires.ftc:gameAssets-CenterStage:1.0.0'
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.3'
     runtimeOnly 'org.tensorflow:tensorflow-lite:2.12.0'
+    //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    implementation('com.acmerobotics.dashboard:dashboard:0.4.6')
+    implementation('com.acmerobotics.dashboard:dashboard:0.4.13')
 }
 
